tenants/le-portail/applications/production/dolibarr/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dolibarr
  namespace: ${tenant}-dolibarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dolibarr.${domain},compta.${domain}
    external-dns.alpha.kubernetes.io/target: ${domain}
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dolibarr.${domain}`)
      kind: Rule
      services:
        - name: dolibarr
          port: 80
    - match: Host(`compta.${domain}`)
      kind: Rule
      services:
        - name: dolibarr
          port: 80
  tls:
    secretName: wildcard.${domain}.tls
